Fix: Bug fixing on scrollbar and responsive design. Change static picture project

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,14 +34,15 @@ body.modal-open {
   position: fixed;
   inset: 0;
   z-index: 50;
-  touch-action: none; 
+  /* touch-action: none;  */
 }
 
 /* Allow scrolling only in modal content */
 .modal-content {
-  overflow-y: auto;
+  overflow-y: auto !important;
   overscroll-behavior: contain;
   -webkit-overflow-scrolling: touch;
+  position: relative;
 }
 
 /* Hide scrollbar but keep functionality */
